# SmartRomanCurtain

./: .gitignore
SmartRomanCurtain/: .cproject  .project  README.md  sdkconfig  sdkconfig.old
SmartRomanCurtain/components/tuya-iot-link-sdk/tuya-iot-link-sdk-embedded-c/examples/switch_demo/: switch_demo.c
SmartRomanCurtain/components/tuya-iot-link-sdk/tuya-iot-link-sdk-embedded-c/examples/switch_demo_non_qrcode/: switch_demo_non_qrcode.c
SmartRomanCurtain/components/tuya-iot-link-sdk/tuya-iot-link-sdk-embedded-c/examples/tuya_ota_demo/: qrencode_print.c  tuya_ota_demo.c
SmartRomanCurtain/components/tuya-iot-link-sdk/tuya-iot-link-sdk-embedded-c/include/: tuya_iot.h
SmartRomanCurtain/components/tuya-iot-link-sdk/tuya-iot-link-sdk-embedded-c/utils/: log.h
SmartRomanCurtain/main/: CMakeLists.txt  DeepSleepNtp.cpp  DeepSleepNtp.h  Main.cpp  MotorController.cpp  MotorController.h  NvsMemoryManager.cpp  NvsMemoryManager.h  OtaUpdater.cpp  OtaUpdater.h  TuyaController.cpp  TuyaController.h  WebServerManager.cpp  WebServerManager.h  WiFiConnector.cpp  WiFiConnector.h  YandexDialogController.cpp  YandexDialogController.h
